dimu-system/credit-service.yaml
### 
apiVersion: apps/v1
kind: Deployment
metadata:
  name: credit-service
  labels:
    app: credit-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: credit-service
  template:
    metadata:
      labels:
        app: credit-service
    spec:
      containers:
        - name: nginx
          image: credit_app
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          lifecycle:
            postStart:
              exec:
                command: ["/bin/sh", "-c", "/app/app.sh"]

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: credit-service
  name: credit-service
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: credit-service
  sessionAffinity: None
