dimu-system/istio_canery_pay_service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: pay-service-vs
spec:
  hosts:
    - pay-service
  http:
    - route:
       - destination:
           host: pay-service
           subset: v1
         weight: 99
       - destination:
           host: pay-service
           subset: v2
         weight: 1

---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: pay-service-dr
spec:
  host: pay-service
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
